test/parallel/forall/zip/zipArrMismatch.good
zipArrMismatch.chpl:4: error: halt reached - zippered iterations have non-equal lengths
